# AtendIA2v

./: .env.example  .gitignore  2026-05-31-atendia-reportl.md  AGENTS.md  ARCHITECTURE.md  AUDITORIA_COMPLETA_ATENDIA_2026_06_09.md  Arquitectura-Deseada.md  Claude.md  Conversaciones - Prueba.txt  Investigacion2026.docx  JunioAuditoria2026.md  PRODUCT_FIRST_LIVE_STABLE_CODEX_IMPLEMENTATION.md  README.md  docker-compose.test.yml  docker-compose.yml  rc5_canary_5_percent_plan.json  rc5_canary_5_percent_plan.md  rc5_canary_5_percent_result.json  rc5_canary_5_percent_result.md
core/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
core/atendia/: catalog_import.py  catalog_runtime.py  commercial_catalog_service.py  config.py  config_validation.py  credit_plan_invariants.py  dinamo_atendia_kb.py  main.py  text_normalization.py
core/atendia/_demo/: __init__.py  fixtures.py  providers.py
core/atendia/agent_runtime/: __init__.py  action_registry.py  advisor_brain_contract.py  advisor_pipeline.py  agent_config.py  agent_service.py  business_event_ledger.py  business_events.py  canonical.py  composer_quote_context.py  context_builder.py  conversation_progress.py  db_backed_preflight.py  field_update_reconciler.py  handoff_resolver.py  human_response_composer.py  knowledge_tool_layer.py  live_transcript_replay_gate.py  llm_usage_log.py  mandatory_tools.py  model_provider.py  operational_state_reconciler.py  pilot_policy.py  policy_validator.py  post_turn_executor.py  provider_quality_gate.py  provider_reliability.py  quote_safety.py  respond_style_audio.py  respond_style_context_builder.py  respond_style_deployment_resolver.py  respond_style_dry_facts_executor.py  respond_style_field_state.py  respond_style_live_simulated_channel.py  respond_style_llm_provider.py  respond_style_manual_simulator.py  respond_style_parity_gate.py  respond_style_product_agent_config_adapter.py  respond_style_product_agent_runtime.py  respond_style_real_facts_executor.py  (+26 more)
core/atendia/api/: _audit.py  _auth_helpers.py  _csrf.py  _deps.py  agent_runtime_v2_routes.py  agents_routes.py  analytics_routes.py  appointments_routes.py  audit_log_routes.py  auth_routes.py  baileys_routes.py  blueprints_routes.py  channel_status_routes.py  conversations_routes.py  customer_fields_routes.py  customer_notes_routes.py  customers_routes.py  dashboard_routes.py  exports_routes.py  (+17 more)
core/baileys-bridge/: .gitignore  Dockerfile  README.md  package.json  server.js
core/scripts/: bootstrap_tenant.py  create_user.py  e2e_meta_workflow.py  e2e_setup.py  prepare_beta_tenant.py  regen_mode_fixtures.py  run_respond_style_window_6_harness_2026_06_10.py  seed_demo.py  seed_demo_appointments.py  seed_demo_conversations.py  seed_demo_data.py  seed_full_mock_data.py  seed_more_conversations.py  seed_zored_user.py  smoke_test_phase1.py  smoke_test_phase2.py
core/tests/: conftest.py  test_config.py  test_config_meta.py
(+1746 files in other folders)
