[project]
name = "atendia-core"
version = "0.1.0"
description = "AtendIA v2 - Núcleo conversacional"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.1.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "pyyaml>=6.0.3",
    "arq>=0.28.0",
    "pyjwt>=2.12.1",
    "bcrypt>=4.2.0",
    "openai>=1.50.0",
    "pgvector>=0.2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "datamodel-code-generator>=0.26.0",
    "httpx>=0.28.1",
    "respx>=0.23.1",
    "jsonschema>=4.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["atendia"]
omit = [
    "atendia/db/migrations/**",
    # One-off operational scripts: exercised manually, not by pytest.
    # T15 ran ingest_dinamo_data._main against the real OpenAI API +
    # local DB — that run is the contract test.
    "atendia/scripts/ingest_dinamo_data.py",
    "atendia/scripts/seed_dinamo_voice.py",
    "atendia/scripts/upgrade_dinamo_pipeline_to_v4.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
